--- a/mr-jobs/views/compartido/header/header-component.ejs
+++ b/mr-jobs/views/compartido/header/header-component.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title><%=titulo%></title>
+        <title><%=titulo%> | MrJob</title>
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/estilos.css">
     </head>
