--- a/mr-jobs/views/usuario/signup.ejs
+++ b/mr-jobs/views/usuario/signup.ejs
@@ -8,7 +8,10 @@
 
 <div class="container">
     <div class="container">
-        <h1><%= existeUsuario ? 'Editar': 'Unirse'%></h1>
+        <h1 class="formulario"><%= existeUsuario ? 'Editar': 'Unirse'%></h1>
+        <div class="alert alert-danger" role="alert">
+            A simple danger alert—check it out!
+        </div>
         <%if(existeUsuario){%>
         <%existeNombre = true%>
         <%existeApellido = true%>
@@ -21,7 +24,7 @@
         <% if(typeof error !== 'undefined'){%>
             <p>Mensaje Error: <%= error%></p>
         <%}%>
-        <form action="<%= existeUsuario ? '/usuario/editarDesdeVista/'+usuario.id : '/usuario/crearDesdeVista'%>"
+        <form action="/home/signup2"
               method="POST">
             <div class="form-group">
                 <label for="correoID">Correo electrónico</label>
@@ -51,11 +54,34 @@
             <div class="form-group">
                 <label for="apellidoID">Apellido</label>
                 <input id="apellidoID" type="text" name="apellido"
-                       class="form-control" placeholder="apellido"
+                       class="form-control" placeholder="Apellido"
                        value="<%= existeApellido ? apellido : '' %>">
             </div>
-            <button type="submit">Registrarse</button>
-            <button type="reset">Limpiar Campos</button>
+            <div class="form-group">
+                <label for="paisID">Seleccione su País/Región</label>
+                <select class="form-control" id="paisID" name="pais">
+                    <option>Escoja uno...</option>
+                    <option value="Alemania">Alemania</option>
+                    <option value="Brasil">Brasil</option>
+                    <option value="China">China</option>
+                    <option value="Ecuador">Ecuador</option>
+                    <option value="España">España</option>
+                    <option value="Estados Unidos">Estados Unidos</option>
+                    <option value="Italia">Italia</option>
+                    <option value="Reino Unido">Reino Unido</option>
+                    <option value="Rusia">Rusia</option>
+                    <option value="Tailandia">Tailandia</option>
+                    <option value="Turquia">Turquía</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="ciudadID">Ciudad</label>
+                <input id="ciudadID" type="text" name="ciudad"
+                       class="form-control" placeholder="Ciudad"
+                       value="<%= existeApellido ? apellido : '' %>">
+            </div>
+            <button type="submit" class="btn btn-primary">Registrarse</button>
+            <button type="reset" class="btn btn-primary">Limpiar Campos</button>
 
         </form>
     </div>
