--- a/mr-jobs/publico/css/estilos.css
+++ b/mr-jobs/publico/css/estilos.css
@@ -15,7 +15,7 @@ body#conImagenFondo {
     background-size: 100% 100%;
     position: relative;
 }
-h1.formulario{
+h1.formularioTitulo{
     text-align:center
 }
 
