--- a/mr-jobs/views/usuario/signup.ejs
+++ b/mr-jobs/views/usuario/signup.ejs
@@ -8,10 +8,8 @@
 
 <div class="container">
     <div class="container">
-        <h1 class="formulario"><%= existeUsuario ? 'Editar': 'Unirse'%></h1>
-        <div class="alert alert-danger" role="alert">
-            A simple danger alert—check it out!
-        </div>
+        <h1 class="formularioTitulo"><%= existeUsuario ? 'Editar': 'Unirse'%></h1>
+
         <%if(existeUsuario){%>
         <%existeNombre = true%>
         <%existeApellido = true%>
@@ -22,9 +20,11 @@
         <%}%>
 
         <% if(typeof error !== 'undefined'){%>
-            <p>Mensaje Error: <%= error%></p>
+            <div class="alert alert-danger" role="alert">
+                Error: <%= error%>
+            </div>
         <%}%>
-        <form action="/home/signup2"
+        <form action="/home/signup"
               method="POST">
             <div class="form-group">
                 <label for="correoID">Correo electrónico</label>
