--- a/mr-jobs/views/usuario/signup.ejs
+++ b/mr-jobs/views/usuario/signup.ejs
@@ -80,7 +80,7 @@
                        class="form-control" placeholder="Ciudad"
                        value="<%= existeApellido ? apellido : '' %>">
             </div>
-            <button type="submit" class="btn btn-primary">Registrarse</button>
+            <button type="submit" class="btn btn-primary">Siguiente</button>
             <button type="reset" class="btn btn-primary">Limpiar Campos</button>
 
         </form>
