--- a/mr-jobs/publico/css/estilos.css
+++ b/mr-jobs/publico/css/estilos.css
@@ -1,24 +1,44 @@
 body > nav > a.navbar-brand{
     font-weight: bold !important;
-    font-size: 30px !important;
+    font-size: 40px !important;
 }
 
 #navbars > ul > li > a > button{
     font-weight: bold !important;
 }
 
-body#conImagenFondo {
-    background-image: url(https://image.freepik.com/free-vector/professional-people-work_24908-58137.jpg);
-    background-color: #cccccc;
-    height: 600px;
-    background-position: center;
-    background-size: 100% 100%;
-    position: relative;
+
+body{
+    background-color: #98BBE1;
 }
+
+#fondoLoginSignup {
+    background-image: url(/resources/images/fondoLoginSignup.png);
+    background-position: center;
+    background-size: contain;
+    position: center;
+}
+
+img.fondoHome {
+    width: 100%;
+}
+
 h1.formularioTitulo{
     text-align:center
 }
 
 
+.tituloHome{
+    font-weight: bold;
+    font-size: 50px;
+    text-align: left;
+}
 
+.subtituloHome{
+    font-size: 20px;
+    text-align: left;
+}
 
+.btn-home-buscar-empleo{
+    border-radius: 50px 50px 50px 50px;
+}
