--- a/mr-jobs/views/usuario/inicio.ejs
+++ b/mr-jobs/views/usuario/inicio.ejs
@@ -2,8 +2,24 @@
 <%- include('../compartido/navbar/navbar-component')%>
 
 
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-transparent">
+    <div class="row">
+        <div class="col-md-7 mx-auto my-auto p-md-5">
+            <h1 class="tituloHome m-md-2">Lorem ipsum dolor sit amet consectetur</h1>
+            <h2 class="subtituloHome m-md-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the </h2>
+            <a href="/home/login">
+                <button type="button" class="btn btn-dark active btn-lg m-md-3 btn-home-buscar-empleo">
+                    Buscar empleo
+                </button>
+            </a>
+        </div>
+        <div class="col-md-5 my-auto">
+            <img src="/resources/images/imagenHome.png" alt="" class="fondoHome">
+        </div>
+    </div>
 
 
+</div>
 
 
 
