--- a/mr-jobs/views/compartido/header/header-component.ejs
+++ b/mr-jobs/views/compartido/header/header-component.ejs
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/estilos.css">
         <link rel="icon" href="/resources/icons/iconoMrJobs.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <%if(controlador == 'signup' || controlador == 'login') {%>
         <body id="fondoLoginSignup">
