Implementacion de sesiones

--- a/mr-jobs/views/compartido/hiddenLabels/usuarioLabels.ejs
+++ b/mr-jobs/views/compartido/hiddenLabels/usuarioLabels.ejs
@@ -1,17 +1,34 @@
-<input hidden id="correoID" name="correo"
-       value="<%=usuario.correo%>">
+<div class="form-group">
+    <input hidden id="nombreUsuarioID" name="nombreUsuario"
+           value="<%=usuario.nombreUsuario%>">
+</div>
+<div class="form-group">
+    <input hidden id="correoID" name="correo"
+           value="<%=usuario.correo%>">
+</div>
 
-<input hidden id="passwordID" name="password"
-       value="<%=usuario.password%>">
+<div class="form-group">
+    <input hidden id="passwordID" name="password"
+           value="<%=usuario.password%>">
+</div>
 
-<input hidden id="nombreID" name="nombre"
-       value="<%= usuario.nombre%>">
+<div class="form-group">
+    <input hidden id="nombreID" name="nombre"
+           value="<%= usuario.nombre%>">
+</div>
 
-<input hidden id="apellidoID" name="apellido"
-       value="<%=usuario.apellido%>">
+<div class="form-group">
+    <input hidden id="apellidoID" name="apellido"
+           value="<%=usuario.apellido%>">
+</div>
 
-<input hidden id="paisID" name="pais"
-       value="<%=usuario.pais%>">
 
-<input hidden id="ciudadID" name="ciudad"
-       value="<%=usuario.ciudad%>">
+<div class="form-group">
+    <input hidden id="paisID" name="pais"
+           value="<%=usuario.pais%>">
+</div>
+
+<div class="form-group">
+    <input hidden id="ciudadID" name="ciudad"
+           value="<%=usuario.ciudad%>">
+</div>
