--- a/mr-jobs/views/usuario/signup.ejs
+++ b/mr-jobs/views/usuario/signup.ejs
@@ -27,6 +27,12 @@
         <form action="/home/signup"
               method="POST">
             <div class="form-group">
+                <label for="nombreUsuarioID">Nombre de usuario</label>
+                <input id="nombreUsuarioID" type="text" name="nombreUsuario"
+                       class="form-control" placeholder="Nombre de usuario"
+                       >
+            </div>
+            <div class="form-group">
                 <label for="correoID">Correo electrónico</label>
                 <input id="correoID" type="email"
                        name="correo" class="form-control"
