Plantillas publicar empleo y registrar empresa

--- a/mr-jobs/views/empleo/buscar.ejs
+++ b/mr-jobs/views/empleo/buscar.ejs
@@ -32,7 +32,7 @@
             <div class="container bg-light border-2">
                     <div class="row p-4">
                         <div class="col-12 pb-3">
-                            <span>En funcion de tu perfil</span>
+                            <span>Empleos más recientes</span>
                         </div>
                         <% for (let i = 0; i < 15; i++) {%>
                         <div class="col-md-4">
