--- a/mr-jobs/views/empleo/publicar.ejs
+++ b/mr-jobs/views/empleo/publicar.ejs
@@ -1,17 +1,11 @@
 <%- include('../compartido/header/header-component')%>
 <%- include('../compartido/navbar/navbar-component')%>
 
-
 <h1>CurrentUser: <%=currentUser%></h1>
-<h1>CurrentProfile: <%=currentProfile%></h1>
-<h1>profile</h1>
+<h1>publicar</h1>
 
 
 
 
-
-<a href="/home/logout">
-    <button>Cerrar sesión</button>
-</a>
 
 <%- include('../compartido/footer/footer-component')%>
