--- a/mr-jobs/views/compartido/navbar/navbar-component.ejs
+++ b/mr-jobs/views/compartido/navbar/navbar-component.ejs
@@ -1,19 +1,46 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="/home">Mr Jobs</a>
+
+    <% if(controlador == 'home' || controlador == 'signup' || controlador == 'login') {%>
+        <a class="navbar-brand" href="/home">Mr Jobs</a>
+    <%} else if(controlador == 'profile' || controlador == 'empleo-buscar' || controlador == 'empleo-publicar' || controlador == 'empresa-registrar'){%>
+    <a class="navbar-brand" href="/home/profile/<%=currentUser%>">Mr Jobs</a>
+    <%}%>
 
     <% if(controlador == 'home') {%>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbars">
+            <ul class="navbar-nav ml-auto ">
+                <li class="nav-item active ">
+                    <a class="nav-link" href="/home/signup"><button type="button" class="btn btn-light">Unirse ahora</button><span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/home/login"><button type="button" class="btn btn-light">Iniciar sesión</button><span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+        </div>
+    <%} else if(controlador == 'profile' || controlador == 'empleo-buscar' || controlador == 'empleo-publicar' || controlador == 'empresa-registrar'){%>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbars">
         <ul class="navbar-nav ml-auto ">
-            <li class="nav-item active ">
-                <a class="nav-link" href="/home/signup"><button type="button" class="btn btn-light">Unirse ahora</button><span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/home/login"><button type="button" class="btn btn-light">Iniciar sesión</button><span class="sr-only">(current)</span></a>
-            </li>
+            <%if(controlador == 'profile' || controlador == 'empleo-publicar' || controlador == 'empresa-registrar'){%>
+                <li class="nav-item active ">
+                    <a class="nav-link" href="/empleo/buscar"><button type="button" class="btn btn-primary border-1-navbar">Buscar empleo</button><span class="sr-only">(current)</span></a>
+                </li>
+            <%}if(controlador == 'profile' || controlador == 'empleo-buscar' || controlador == 'empresa-registrar'){%>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/empleo/publicar"><button type="button" class="btn btn-primary border-1-navbar">Publicar empleo</button><span class="sr-only">(current)</span></a>
+                </li>
+            <%}if(controlador == 'profile' || controlador == 'empleo-buscar' || controlador == 'empleo-publicar'){%>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/empresa/registrar"><button type="button" class="btn btn-primary border-1-navbar">Registrar empresa</button><span class="sr-only">(current)</span></a>
+                </li>
+            <%}%>
         </ul>
     </div>
     <%}%>
