--- a/mr-jobs/views/compartido/hiddenLabels/usuarioLabels.ejs
+++ b/mr-jobs/views/compartido/hiddenLabels/usuarioLabels.ejs
@@ -1,6 +1,6 @@
 <div class="form-group">
-    <input hidden id="nombreUsuarioID" name="nombreUsuario"
-           value="<%=usuario.nombreUsuario%>">
+    <input hidden id="usernameID" name="username"
+           value="<%=usuario.username%>">
 </div>
 <div class="form-group">
     <input hidden id="correoID" name="correo"
