--- a/mr-jobs/views/empleo/publicar.ejs
+++ b/mr-jobs/views/empleo/publicar.ejs
@@ -1,10 +1,34 @@
 <%- include('../compartido/header/header-component')%>
 <%- include('../compartido/navbar/navbar-component')%>
 
-<h1>CurrentUser: <%=currentUser%></h1>
-<h1>publicar</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="jumbotron bg-transparent m-0">
+                <h4 class="display-4 text-center p-0 m-0">¡Anuncia tu empleo en el lugar donde se dan cita personas y oportunidades!</h4>
+            </div>
+        </div>
+    </div>
+</div>
 
-
+<div class="container">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+            <div class="card border-top-0 b border-left-0 border-right-0 radius-card-head">
+                <div class="card-header rounded-top card-title-color text-center radius-card-body">
+                    <h4><strong>Publicar</strong></h4>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-3"></div>
+    </div>
+</div>
 
 
 
