--- a/mr-jobs/views/empresa/registrar.ejs
+++ b/mr-jobs/views/empresa/registrar.ejs
@@ -1,9 +1,52 @@
 <%- include('../compartido/header/header-component')%>
 <%- include('../compartido/navbar/navbar-component')%>
 
-<h1>CurrentUser: <%=currentUser%></h1>
-<h1>Registrar empresa</h1>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="jumbotron bg-transparent m-0">
+                <h4 class="display-4 text-center p-0 m-0">¡Registra tu empresa y brinda oportunidades al mundo!</h4>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container mb-5">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+            <div class="card border-top-0 b border-left-0 border-right-0 radius-card-head">
+                <div class="card-header rounded-top card-title-color text-center radius-card-body">
+                    <h4><strong>Registrar</strong></h4>
+                </div>
+                <div class="card-body">
+
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary btn-home-buscar-empleo mr-5 ml-5 pl-3 pr-3">Enviar</button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-3"></div>
+    </div>
+</div>
 
 
 <%- include('../compartido/footer/footer-component')%>
