--- a/mr-jobs/views/usuario/signup.ejs
+++ b/mr-jobs/views/usuario/signup.ejs
@@ -27,8 +27,8 @@
         <form action="/home/signup"
               method="POST">
             <div class="form-group">
-                <label for="nombreUsuarioID">Nombre de usuario</label>
-                <input id="nombreUsuarioID" type="text" name="nombreUsuario"
+                <label for="usernameID">Username</label>
+                <input id="usernameID" type="text" name="username"
                        class="form-control" placeholder="Nombre de usuario"
                        >
             </div>
