--- a/mr-jobs/views/empleo/buscar.ejs
+++ b/mr-jobs/views/empleo/buscar.ejs
@@ -26,7 +26,7 @@
     </div>
 </div>
 
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-12 ">
             <div class="container bg-light border-2">
@@ -56,7 +56,5 @@
         </div>
     </div>
 </div>
-
-<a href="" class="a-no-underline">HOLA MUNDO</a>
 
 <%- include('../compartido/footer/footer-component')%>
