--- a/mr-jobs/views/empresa/registrar.ejs
+++ b/mr-jobs/views/empresa/registrar.ejs
@@ -5,9 +5,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
+
             <div class="jumbotron bg-transparent m-0">
-                <h4 class="display-4 text-center p-0 m-0">¡Registra tu empresa y brinda oportunidades al mundo!</h4>
+                <h4 class="display-4 text-center p-0 m-0">¡Registra tu empresa y empieza a brindar oportunidades al mundo!</h4>
             </div>
+
+
+
         </div>
     </div>
 </div>
@@ -15,36 +19,48 @@
 <div class="container mb-5">
     <div class="row">
         <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-6 ">
             <div class="card border-top-0 b border-left-0 border-right-0 radius-card-head">
                 <div class="card-header rounded-top card-title-color text-center radius-card-body">
-                    <h4><strong>Registrar</strong></h4>
+                    <h4><strong>Registrar empresa</strong></h4>
                 </div>
-                <div class="card-body">
+                <div class="card-body px-5 py-4">
 
                     <form>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            <label for="nombreEmpresaID">Nombre <span class="campo-obligatorio">*</span></label>
+                            <input type="text" class="form-control"
+                                   id="nombreEmpresaID" name="nombreEmpresa" required>
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
+                            <label for="sectorEmpresaID">Sector <span class="campo-obligatorio">*</span></label>
+                            <input type="text" class="form-control"
+                                   id="sectorEmpresaID" name="sectorEmpresa" required>
                         </div>
-                        <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        <div class="form-group">
+                            <label for="numEmpleadosID">Número de empleados <span class="campo-obligatorio">*</span></label>
+                            <input type="number" class="form-control"
+                                   id="numEmpleadosID" name="numEmpleados" required>
                         </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary btn-home-buscar-empleo mr-5 ml-5 pl-3 pr-3">Enviar</button>
+<!--                        SI ES QUE EXISTE ERROR MOSTRAR ESO-->
+                        <div class="alert alert-danger text-center" role="alert">
+                            Aquí va el mensaje de error de validación
                         </div>
 
+                        <div class="text-center">
+                            <div class="row pt-2">
+                                <div class="col-3"></div>
+                                <div class="col-6">
+                                    <button type="submit"
+                                            class="btn btn-primary btn-home-buscar-empleo btn-block ">Enviar</button>
+                                </div>
+                                <div class="col-3"></div>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="col-3"></div>
     </div>
 </div>
 
