--- a/mr-jobs/views/usuario/login.ejs
+++ b/mr-jobs/views/usuario/login.ejs
@@ -1,6 +1,62 @@
 <%- include('../compartido/header/header-component')%>
 <%- include('../compartido/navbar/navbar-component')%>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+
+            <div class="jumbotron bg-transparent m-0">
+                <h1 class="display-4 text-center p-0 m-0">No esperes más por el trabajo de tus sueños</h1>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container mb-5">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6 ">
+            <div class="card border-top-0 b border-left-0 border-right-0 radius-card-head">
+                <div class="card-header rounded-top card-title-color text-center radius-card-body">
+                    <h4><strong>Iniciar Sesion</strong></h4>
+                </div>
+                <div class="card-body px-5 py-4">
+
+                    <form>
+                        <div class="form-group">
+                            <label for="usernameID">Nombre de usuario <span class="campo-obligatorio">*</span></label>
+                            <input type="text" class="form-control"
+                                   id="usernameID" name="username" required placeholder="Nombre de Usuario">
+                        </div>
+                        <div class="form-group">
+                            <label for="passwordID">Contraseña <span class="campo-obligatorio">*</span></label>
+                            <input type="password" class="form-control"
+                                   id="passwordID" name="password" required placeholder="Contraseña">
+                        </div>
+                        <!--                        SI ES QUE EXISTE ERROR MOSTRAR ESO-->
+                        <% if(typeof error !== 'undefined'){%>
+                            <div class="alert alert-danger text-center" role="alert">
+                                Error: <%= error%>
+                            </div>
+                        <%}%>
+
+                        <div class="text-center">
+                            <div class="row pt-2">
+                                <div class="col-3"></div>
+                                <div class="col-6">
+                                    <button type="submit"
+                                            class="btn btn-primary btn-home-buscar-empleo btn-block ">Enviar</button>
+                                </div>
+                                <div class="col-3"></div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 
