diseño Login finish

--- a/mr-jobs/views/usuario/login.ejs
+++ b/mr-jobs/views/usuario/login.ejs
@@ -6,7 +6,7 @@
         <div class="col-md-12">
 
             <div class="jumbotron bg-transparent m-0">
-                <h1 class="display-4 text-center p-0 m-0">No esperes más por el trabajo de tus sueños</h1>
+                <h1 class="display-4 text-center p-0 m-0">No esperes más por el trabajo perfecto para ti</h1>
             </div>
         </div>
     </div>
@@ -46,11 +46,21 @@
                                 <div class="col-6">
                                     <button type="submit"
                                             class="btn btn-primary btn-home-buscar-empleo btn-block ">Enviar</button>
+
                                 </div>
                                 <div class="col-3"></div>
                             </div>
                         </div>
                     </form>
+                    <br>
+                    <div class="container">
+                        <p style="text-align: center">¿No tienes una cuenta?</p>
+                        <br>
+                        <a href="/home/signup" style="width: 35%"
+                           class="btn btn-secondary active btn-home-buscar-empleo center btn-block"
+                           aria-pressed="true">Crear una cuenta</a>
+                        <br>
+                    </div>
                 </div>
             </div>
         </div>
