--- a/mr-jobs/views/empresa/registrar.ejs
+++ b/mr-jobs/views/empresa/registrar.ejs
@@ -1,6 +1,20 @@
 <%- include('../compartido/header/header-component')%>
 <%- include('../compartido/navbar/navbar-component')%>
 
+<%if(registroExitoso != undefined){%>
+<div class="container mt-5 pt-4">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+            <div class="alert alert-success" role="alert">
+                <h4 class="alert-heading">Bien hecho!</h4>
+                <p>Tu empresa ha sido registrada con éxito.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<%}%>
+
 
 <div class="container">
     <div class="row">
@@ -11,6 +25,8 @@
         </div>
     </div>
 </div>
+
+
 
 <div class="container mb-5">
     <div class="row">
@@ -45,6 +61,7 @@
                             <%= mensajeError%>
                         </div>
                         <%}%>
+
                         <div class="text-center">
                             <div class="row pt-2">
                                 <div class="col-3"></div>
