--- a/mr-jobs/views/usuario/login.ejs
+++ b/mr-jobs/views/usuario/login.ejs
@@ -22,7 +22,8 @@
                 </div>
                 <div class="card-body px-5 py-4">
 
-                    <form>
+                    <form action="/home/login"
+                          method="POST">
                         <div class="form-group">
                             <label for="usernameID">Nombre de usuario <span class="campo-obligatorio">*</span></label>
                             <input type="text" class="form-control"
